# EEG-BCI-Motion-Imagination

./: .gitignore  .python-version  CLAUDE.md  README.md  pyproject.toml
configs/: cbramod_cawd_new.yaml  cbramod_cawd_old.yaml  cbramod_config.yaml  eegnet_cawd.yaml  eegnet_config.yaml  eegnet_config.yaml.deprecated  experiment_config.yaml
data/: README.txt  biosemi128.elc  channel_mapping.json
docs/: TROUBLESHOOTING.md  bugfix_trial_index_deduplication.md  eegnet_implementation_comparison.md  experiment_plan_v1.md  preprocessing_architecture.md
results/: 20260107_1825_comparison_cache_imagery_binary.json  20260107_1831_comparison_cache_imagery_binary.json  20260107_1831_comparison_imagery_binary.json  20260107_1904_comparison_cache_imagery_binary.json  20260107_1904_comparison_imagery_binary.json  20260107_2159_comparison_cache_imagery_binary.json  20260107_2159_comparison_imagery_binary.json  20260108_0050_comparison_cache_imagery_binary.json  20260108_0055_comparison_cache_imagery_ternary.json  20260108_0055_comparison_imagery_ternary.json  20260108_0212_comparison_cache_imagery_binary.json  20260108_0212_comparison_imagery_binary.json  20260109_2337_comparison_cache_imagery_ternary.json  20260109_2337_comparison_imagery_ternary.json  20260110_0019_comparison_cache_imagery_ternary.json  20260110_0019_comparison_imagery_ternary.json  20260110_0110_comparison_cache_imagery_ternary.json  20260110_0114_comparison_cache_imagery_ternary.json  20260110_0129_comparison_cache_imagery_ternary.json  20260110_0137_comparison_cache_imagery_ternary.json  20260110_0139_comparison_cache_imagery_binary.json  20260110_0139_comparison_imagery_binary.json  (+96 more)
src/: __init__.py
(+119 files in other folders)
